# key-value-memory-db-c

./: .gitignore  CMakeLists.txt  README.md
scripts/: client.py
src/: command.c  command.h  hash_table.c  hash_table.h  mendb.c  queue.c  queue.h  server.c  server.h
test/: CMakeLists.txt  command_test.c  hash_table_test.c  queue_test.c
test/integration/: client.py
